[package]
name = "reverse_engineering_lib"
version = "0.2.0"
edition = "2021"
description = "A Rust library for reverse engineering tasks, including entropy calculation, color-based hex visualization, and PE file analysis."
repository = "https://github.com/bdr-pro/reverse_engineering_lib"
authors = ["Bader alotaibi baderalotaibi3@gmail.com"]
license = "MIT"
categories = ["reverse-engineering","malware-analysis","pe-file","entropy-calculation","hex-visualization"]

[dependencies]
sha2 = "0.10.8"
rand = "0.8.4"
goblin = "0.8.0"

